--- a/src/scss/view-policy.scss
+++ b/src/scss/view-policy.scss
@@ -1,5 +1,5 @@
 .breadbutter-policy {
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-family: var(--bb-font-family);
   position: fixed;
   bottom: 10px;
   right: 10px;
